syntax = "proto3";
package service;
option go_package = "../pkg/service";

message UserInfo {
  int64 UserId = 1;
  string Name = 2;
  int64 FollowCount = 3;
  int64 FollowerCount = 4;
  bool IsFollow = 5;
}

message GetUserInfoReq {
  repeated int64 UsersId = 1;
}

message GetUserInfoRes {
  int32 Status = 1;
  repeated UserInfo UsersInfo = 2;
}

service UserService {
  rpc GetUserInfo (GetUserInfoReq) returns (GetUserInfoRes);
}